tests/baselines/reference/downlevelLetConst1.errors.txt
downlevelLetConst1.ts(1,6): error TS1123: Variable declaration list cannot be empty.


==== downlevelLetConst1.ts (1 errors) ====
    const
         
!!! error TS1123: Variable declaration list cannot be empty.